--- a/src/components/SideBar.css
+++ b/src/components/SideBar.css
@@ -112,6 +112,11 @@
   font-size: 1.2em;
 }
 
+.icon-table::before {
+  content: '📊';
+  font-size: 1.2em;
+}
+
 .menu-text {
   flex: 1;
   text-align: left;
